--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 10 15:19:17 EET 2016
-sdk.dir=D\:\\Programes\\Android\\sdk
+#Sun Jan 10 22:50:53 EET 2016
+sdk.dir=D\:\\Programmes\\AndroidSDK
