--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.mikepenz.materialdrawer:library:0.9.5@aar'
+    compile('com.mikepenz:materialdrawer:4.6.4@aar') {
+        transitive = true
+    }
     compile 'com.mikepenz:iconics-core:2.5.3@aar'
     compile 'com.squareup:otto:1.3.8'
 
