--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,9 @@ dependencies {
     compile 'com.mikepenz:iconics-core:2.5.3@aar'
     compile 'com.squareup:otto:1.3.8'
 
+    compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+
 }
