--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".ui.app.LingowlApp">
         <activity
             android:name=".ui.activity.MainActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
@@ -22,7 +23,7 @@
         </activity>
         <activity android:name=".ui.activity.CreateNewWordActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.fragment.CategoriesPickerActivity"
+        <activity android:name=".ui.activity.CategoriesPickerActivity"
             android:screenOrientation="portrait"/>
 
     </application>
